fix dark mode shadows

--- a/styles.css
+++ b/styles.css
@@ -386,7 +386,7 @@ video::-webkit-media-controls-start-playback-button {
     color: var(--color-secondary-light);
     background-color: #1E0640D0;
     border: 1px solid var(--color-border-dark);
-    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.1);
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.5);
 }
 
 .dark-mode .project-description span{
@@ -474,7 +474,7 @@ video::-webkit-media-controls-start-playback-button {
 .dark-mode #about .container{
     background-color: var(--container-bg-dark);
     border: 1px solid var(--color-border-dark);
-    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.1);
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.5);
 }
 
 .text-box{
@@ -1010,7 +1010,7 @@ video::-webkit-media-controls-start-playback-button {
 .dark-mode .current-container {
     background-color: var(--container-bg-dark);
     border: 1px solid var(--color-border-dark);
-    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.1);
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.5);
 }
 
 .current-content {
@@ -1328,7 +1328,7 @@ video::-webkit-media-controls-start-playback-button {
 .dark-mode .additional-project {
     background-color: var(--container-bg-dark);
     border: 1px solid var(--color-border-dark);
-    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.1);
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.5);
 }
 
 .dark-mode .project-header h3,
